Fix visibility of submission card modal

--- a/src/components/home/SubmissionCard.css
+++ b/src/components/home/SubmissionCard.css
@@ -2,8 +2,6 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    border: 1px solid grey;
-    border-radius: 10px;
     margin-bottom: 10px;
     align-self: center;
     overflow-wrap: break-word;
